nesc-frontend/src/test/resources/integration/programs/good/good19/I.nc
interface I<A1, A2>
{
   command void c(A1 arg1, A2 arg2);
   event void e(A1 arg1, A2 arg2);
}
