nesc-frontend/src/test/resources/integration/programs/bad/bad24/I.nc
interface I<A>
{
   command void c(A arg);
   event void e(A arg);
}
